deployments/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pubsubgo
  labels:
    name: pubsubgo
    app: pubsubgo
